2009-09-02  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneCommands.cs: Enable the "debug in xcode" command for
	  the sim. Disable commands if there isn't a mappable
	  configuration for the active sln configuration.

2009-09-02  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Substitute variables into the extra
	  mtouch args. Fixes "Bug 535455 - Add ability to specify
	  $ProjectLocation in additional mtouch arguments".

2009-09-02  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Tidy up file enumeration code. Copy
	  nibs into root even if they're in subdirs, but special-case
	  for lproj directories. Should fix Bug 536151 -
	  XIB/Controllers in Subdirs.

2009-09-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Keychain.cs: Refactor buffer copying into a method on the
	  CssmData struct.

2009-09-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Keychain.cs: Use Marshal.Copy instead of a for loop.

2009-08-31  Michael Hutchinson  <mhutchinson@novell.com>

	* Keychain.cs:
	* MobileProvision.cs: Use X509Certificate2.

2009-08-31  Michael Hutchinson  <mhutchinson@novell.com>

	* Keychain.cs: API cleanup. Add a method for getting x509
	  signing certs from the Apple keychain.

	* Gui/IPhoneSigningKeyPanel.cs: API cleanup.

2009-08-28  Michael Hutchinson  <mhutchinson@novell.com>

	* MobileProvision.cs: Fix search path.

2009-08-28  Michael Hutchinson  <mhutchinson@novell.com>

	* MobileProvision.cs: Extract X509 certs from the binary blob.

2009-08-28  Michael Hutchinson  <mhutchinson@novell.com>

	* PropertyList/PlistDate.cs:
	* PropertyList/PlistDocument.cs: Add support for date
	  elements.

	* MonoDevelop.IPhone.csproj: Updated.

	* MobileProvision.cs: Class for reading .mobileprovision
	  files.

2009-08-26  Michael Hutchinson  <mhutchinson@novell.com>

	* CodeBehindGenerator.cs: Don't generate partial classes for
	  classes that are referenced from other nibs.
